# learnBusiness

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  data-documentation.md  operation-manual.md
docs/superpowers/plans/: 2026-06-14-business-doc-agent.md  2026-06-14-learnBusiness.md
docs/superpowers/specs/: 2026-06-14-business-doc-agent-design.md  2026-06-14-learnBusiness-design.md
openspec/changes/archive/2026-06-15-optimize-local-ai-provider-runtime/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-image-ingest-search-and-business-analysis/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-enhance-document-extraction-citations-observability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-add-traceable-reasoning-and-file-types/: design.md  proposal.md  tasks.md
openspec/changes/optimize-local-ai-provider-runtime/: tasks.md
openspec/specs/ai-provider-runtime/: spec.md
openspec/specs/answer-citations/: spec.md
openspec/specs/business-analysis-report/: spec.md
openspec/specs/document-extraction/: spec.md
openspec/specs/execution-permissions/: spec.md
openspec/specs/operation-step-tracing/: spec.md
openspec/specs/retrieval-inspection/: spec.md
src/: config.rs  discover.rs  lib.rs  main.rs  models.rs  qa.rs  report.rs  store.rs  task.rs  trace.rs  workspace.rs
src/ai/: cache.rs  http.rs  http_provider.rs  local_http.rs  mod.rs  ollama.rs  openai.rs  redaction.rs  runtime.rs
src/ingest/: extract.rs  mod.rs
tests/: cli_flow.rs
(+14 files in other folders)
